namespace Server.Api.Models
{
    public class Professor : User
    {

    }
}
