namespace Server.Api.Models
{
    public class Student : User
    {
        public int FieldOfStudyId { get; set; }
    }
}
